--- a/views/choosefile.erb
+++ b/views/choosefile.erb
@@ -7,10 +7,10 @@ aForm = <<-eos
 
 
 </head> <body> <div> <table>
-<th>Choose File</th> <th>Clarifications</th>
+
 <tr>
 <td> <input type = "file" name = "myfile" value ="Choose File"/> </td>
-<td> <input type = "submit" style= "font-face: 'Comic Sans MS'; font-size: larger; color: teal; background-color: teal; border: 3pt ridge lightgrey" name="gobutton" id="sam" value="Upload" formaction = "/showclaris"/> </td> 
+<td> <input type = "Submit" style= "font-face: 'Comic Sans MS'; font-size: larger; color: teal; background-color: lightgray; border: 3pt ridge lightgrey" name="gobutton" id="sam" value="Clarifications" formaction = "/showclaris"/> </td> 
 
 
 
