--- a/views/choosefileNUA.erb
+++ b/views/choosefileNUA.erb
@@ -7,10 +7,10 @@ aForm = <<-eos
 
 
 </head> <body> <div> <table>
-<th>Choose File</th> <th>Get Evidence</th>
+
 <tr>
 <td> <input type = "file" name = "myfile" value ="Choose File"/> </td>
-<td> <input type = "submit" style= "font-face: 'Comic Sans MS'; font-size: larger; color: teal; background-color: teal; border: 3pt ridge lightgrey" name="gobutton" id="sam" value="Upload" formaction = "/showevidenceNUA"/> </td> 
+<td> <input type = "submit" style= "font-face: 'Comic Sans MS'; font-size: larger; color: teal; background-color: lightgray; border: 3pt ridge lightgrey" name="gobutton" id="sam" value="Evidence" formaction = "/showevidenceNUA"/> </td> 
 
 
 
