--- a/views/showclaris.erb
+++ b/views/showclaris.erb
@@ -23,7 +23,7 @@ aForm = aForm + "<td> <input type = \"text\" name = \"clari#{i}\" value =\"#{acl
 aForm = aForm + "<tr>"
 
 aForm = aForm + "</table></div>"
-aForm = aForm  + "<input type = \"submit\" name=\"return\" value = \"Return to / Refresh File List\" formaction = \"/showfiles\"/>"
+aForm = aForm  + "<input type = \"submit\" name=\"return\" value = \"Return to Choose File\" formaction = \"/showfiles\"/>"
 aForm = aForm + "</body> </form> </html>"
 
 return aForm
