--- a/views/choosefileNUA.erb
+++ b/views/choosefileNUA.erb
@@ -5,12 +5,13 @@ aForm = <<-eos
 <head> <title>Files</title> 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
+</head>
 
 </head> <body> <div> <table>
 
 <tr>
-<td> <input type = "file" name = "myfile" value ="Choose File"/> </td>
-<td> <input type = "submit" style= "font-face: 'Comic Sans MS'; font-size: larger; color: teal; background-color: lightgray; border: 3pt ridge lightgrey" name="gobutton" id="sam" value="Evidence" formaction = "/showevidenceNUA"/> </td> 
+<td> <input type = "file"  id=\"input\" name = "myfile" value ="Choose File" </td>
+<td> <input type = "submit"  style= "font-face: 'Comic Sans MS'; font-size: larger; color: teal; background-color: lightgray; border: 3pt ridge lightgrey" name="gobutton" id="sam" value="Evidence" formaction = "/showevidenceNUA"/> </td> 
 
 
 
