--- a/views/choosefile.erb
+++ b/views/choosefile.erb
@@ -9,7 +9,7 @@ aForm = <<-eos
 </head> <body> <div> <table>
 
 <tr>
-<td> <input type = "file" name = "myfile" value ="Choose File" multiple = "multiple"/> </td>
+<td> <input type = "file" name = "myfile" value ="Choose File"/> </td>
 <td> <input type = "Submit" style= "font-face: 'Comic Sans MS'; font-size: larger; color: teal; background-color: lightgray; border: 3pt ridge lightgrey" name="gobutton" id="sam" value="Clarifications" formaction = "/showclaris"/> </td> 
 
 
