--- a/views/choosefile.erb
+++ b/views/choosefile.erb
@@ -9,8 +9,8 @@ aForm = <<-eos
 </head> <body> <div> <table>
 
 <tr>
-<td> <input type = "file" name = "myfile" value ="Choose File"/> </td>
-<td> <input type = "Submit" style= "font-face: 'Comic Sans MS'; font-size: larger; color: teal; background-color: lightgray; border: 3pt ridge lightgrey" name="gobutton" id="sam" value="Clarifications" formaction = "/showclaris"/> </td> 
+<td> <input type = "file" id="dave" name="chosenfiles[]" value ="Choose File" multiple = "multiple"/> </td>
+<td> <input type = "Submit" id = "bob" style= "font-face: 'Comic Sans MS'; font-size: larger; color: teal; background-color: lightgray; border: 3pt ridge lightgrey" name="gobutton" id="sam" value="Clarifications" formaction = "/showfirstfile"/> </td> 
 
 
 
