--- a/views/showclarisDQR.erb
+++ b/views/showclarisDQR.erb
@@ -1,36 +1,46 @@
 
  
 <%      
+aForm = <<-eos
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<form action="/board" method="post"> 
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"> 
+<head> <title>Clarifications</title> </head> <body> 
 
-aForm = "<!DOCTYPE html PUBLIC \"-//W3C//DTD XHTML 1.0 Strict//EN\" \"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd\">"
-aForm = aForm + " <form action=\"/board\" method=\"post\"> "
-aForm = aForm + "<html xmlns=\"http://www.w3.org/1999/xhtml\" lang=\"en\" xml:lang=\"en\"> "
-aForm = aForm + "<head> <title>Clarifications</title> </head> <body> "
+<input type = "submit" name="return" value = "Next File" formaction = "/shownextfileDQR"/>
+<input type = "submit" name="return" value = "Prev File" formaction = "/showprevfileDQR"/>
+<input type = "submit" name="return" value = "Return to Choose File" formaction = "/showfilesDQR"/>
 
-aForm = aForm  + "<input type = \"submit\" name=\"return\" value = \"Next File\" formaction = \"/shownextfileDQR\"/>"
-aForm = aForm  + "<input type = \"submit\" name=\"return\" value = \"Prev File\" formaction = \"/showprevfileDQR\"/>"
-aForm = aForm  + "<input type = \"submit\" name=\"return\" value = \"Return to Choose File\" formaction = \"/showfilesDQR\"/>"
-
-aForm = aForm + "<div> <table> "
-aForm = aForm + "<td>Clarifications for:</td> <th> #{$thefile} </th>"
-aForm = aForm + " </table> </div>"
-aForm = aForm + "<div> <table> "
+<div> <table>
+<td>Clarifications for:</td> <th> #{$thefile} </th>
+</table> </div>
+<div> <table> 
  
-aForm = aForm + "<th>Family</th> <th>Kind</th><th>Confidence</th><th>Evidence</th>"
+<th>Family</th> <th>Kind</th><th>Confidence</th><th>Evidence</th><th>MRN</th><th>Visit</th>
+eos
 
 $claris.each_index {|i| aclari = $claris[i]
-aForm = aForm + "<tr>"
-aForm = aForm + "<td> <input type = \"text\" name = \"clari#{i}\" value =\"#{aclari[:family]}\" size = \"25\"</td>" 
-aForm = aForm + "<td> <input type = \"text\" name = \"clari#{i}\" value =\"#{aclari[:kind]}\" size = \"35\"</td>" 
-aForm = aForm + "<td> <input type = \"text\" name = \"clari#{i}\" value =\"#{aclari[:confidence]}\" size = \"6\"</td>" 
-aForm = aForm + "<td> <input type = \"text\" name = \"clari#{i}\" value =\"#{aclari[:documentationText]}\" size = \"150\"</td>" 
+if aclari[:confidence] == 3
+	button = "<td> <input type = \"submit\" style=\"font-face: 'Comic Sans MS'; font-size: larger; color: teal; background-color: teal; border: 3pt ridge lightgrey\" name=\"clarification\" value = \"#{i}\" formaction = \"/showclarisDQR\"/> </td>"
+else
+	button = ""
+end
+aForm = aForm + <<-eos
+<tr>
+<td> <input type = "text" name = "clari#{i}" value ="#{aclari[:family]}" size = "25"</td>
+<td> <input type = "text" name = "clari#{i}" value ="#{aclari[:kind]}" size = "35"</td>
+<td> <input type = "text" name = "clari#{i}" value ="#{aclari[:confidence]}" size = "6"</td>
+<td> <input type = "text" name = "clari#{i}" value ="#{aclari[:documentationText]}" size = "100"</td>
+<td> <input type = "text" name = "clari#{i}" value ="#{aclari[:mrn]}" size = "10"</td>
+<td> <input type = "text" name = "clari#{i}" value ="#{aclari[:visit]}" size = "20"</td>
+#{button}
+</tr>"
+eos
 }
-aForm = aForm + "<tr>"
-
-aForm = aForm + "</table></div>"
-
-aForm = aForm + "</body> </form> </html>"
-
+aForm = aForm + <<-eos
+</table></div>
+</body> </form> </html>
+eos
 return aForm
 %>
  
