--- a/views/showclarisDQR.erb
+++ b/views/showclarisDQR.erb
@@ -21,7 +21,7 @@ eos
 
 $claris.each_index {|i| aclari = $claris[i]
 if aclari[:confidence] == 3
-	button = "<td> <input type = \"submit\" style=\"font-face: 'Comic Sans MS'; font-size: larger; color: teal; background-color: teal; border: 3pt ridge lightgrey\" name=\"clarification\" value = \"#{i}\" formaction = \"/showclarisDQR\"/> </td>"
+	button = "<td> <input type = \"submit\" style=\"font-face: 'Comic Sans MS'; font-size: larger; color: teal; background-color: teal; border: 3pt ridge lightgrey\" name=\"clarification\" value = \"#{i}\" formaction = \"/chooseresponseDQR\"/> </td>"
 else
 	button = ""
 end
