--- a/views/chooseinputoutputDQR.erb
+++ b/views/chooseinputoutputDQR.erb
@@ -11,14 +11,14 @@ aForm = <<-eos
 
 <tr>
 
-<td> <input type = "submit" id = "bob" style= "font-face: 'Comic Sans MS'; font-size: larger; color: teal; background-color: lightgray; border: 3pt ridge lightgrey" name="inputbutton"  value="Input" formaction = "/inputDQR"/> </td> 
+<td> <input type = "submit"  style= "font-face: 'Comic Sans MS'; font-size: larger; color: teal; background-color: lightgray; border: 3pt ridge lightgrey" name="inputbutton"  value="Input" formaction = "/inputDQR"/> </td> 
 
-<td> <input type = "submit" id = "bob" style= "font-face: 'Comic Sans MS'; font-size: larger; color: teal; background-color: lightgray; border: 3pt ridge lightgrey" name="outputbutton"  value="Output" formaction = "/outputDQR"/> </td> 
+<td> <input type = "submit" style= "font-face: 'Comic Sans MS'; font-size: larger; color: teal; background-color: lightgray; border: 3pt ridge lightgrey" name="outputbutton"  value="Output" formaction = "/outputDQR"/> </td> 
 
 
 </tr>
 </table></div>
-</body> </form> </html>
+</body></html> </form> 
 eos
 return aForm
 %>
